fixed site nav and social link overlappig

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -73,6 +73,12 @@
   a {
     margin-right: 1em;
   }
+
+  @include media-query($on-palm) {
+    position: absolute;
+    right: 75px;
+  }
+
 }
 
 
